# interview-ai-engineer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.cursor/rules/: implementation-plan-living-doc.mdc  learned-tech.mdc  modicus-takehome-agent.mdc
.cursor/skills/docker-desktop-python/: SKILL.md
.cursor/skills/fastapi-async-api/: SKILL.md
.cursor/skills/fda-regulatory-data-sources/: SKILL.md
.cursor/skills/github-actions-uv-python/: SKILL.md
.github/workflows/: ci.yml
context/plans/: implementation-plan.md
fda-regulations/: .env.example  README.md  main.py  pyproject.toml
fda-regulations/docs/: mental-model-code-review.md
fda-regulations/reports/: improvement-report.md  phase1.md
fda-regulations/scripts/: rehydrate_warning_letters.py
fda-regulations/src/fda_regulations/: __init__.py  chunk_pipeline.py  config.py  reporting.py  site_urls.py  tokenize.py  types.py
fda-regulations/src/fda_regulations/app/: main.py  models.py  schemas.py
fda-regulations/src/fda_regulations/app/routers/: health.py  search.py
fda-regulations/src/fda_regulations/chunking/: __init__.py  cfr.py  chunk_letter.py  models.py  paragraphs.py
fda-regulations/src/fda_regulations/cli/: __init__.py  build_index.py  ingest_rich_summary.py  rehydrate.py  scrape.py
fda-regulations/src/fda_regulations/index/: __init__.py  bm25_tokens.py  build.py  load.py  manifest.py  retriever.py  rrf.py
fda-regulations/src/fda_regulations/ingest/: README.md  __init__.py  corpus.py
fda-regulations/src/fda_regulations/ingest/scrape/: __init__.py  client.py  datatables_listing.py  letter_text.py  listing.py  main.py  models.py  progress_reporting.py
fda-regulations/src/fda_regulations/search/: __init__.py  bootstrap.py  protocol.py  query.py  retriever_factory.py  stub.py
fda-regulations/tests/: conftest.py  test_health.py  test_ingest_listing.py  test_ingest_main.py  test_query.py  test_retrieval_quality.py  test_retrieval_quality_artifacts.py  test_rrf.py  test_search.py  test_startup.py  test_tokenize.py
fda-regulations/tests/fixtures/retrieval_eval_corpus/: corpus_manifest.json  letters.jsonl
fda-regulations/tests/ingestion/: test_cfr.py  test_chunk_letter.py  test_chunk_pipeline.py  test_corpus.py  test_paragraphs.py  test_pipeline_e2e.py  test_scrape_letter_text.py  test_scrape_listing.py  test_scrape_main.py
(+11 files in other folders)
