[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fda-regulations"
version = "0.1.0"
description = "FDA warning-letter hybrid RAG PoC (Modicus takehome)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pyright>=1.1.389",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fda_regulations"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv"]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
